# miniscience

./: README.md
Lab1/: Arrow.stl  CMakeLists.txt  model.cpp  thor.cpp
Lab2/: CMakeLists.txt  model.cpp
Lab3/: CMakeLists.txt  HyperElasticity.cpp  HyperElasticity.h  HyperElasticity.ufl
